--- a/softwaremaintenece/build.xml
+++ b/softwaremaintenece/build.xml
@@ -1,27 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 	<project name="frogAntdemo">
-		<target name="run" depends= "compile">
-		 
+		<target name="run" depends="compile">
 			<java classname="frogMain.Main" classpath="intermediary">
-			
+		
 			</java>
 		</target>
 		
-		<target name ="compile">
-	
+		<target name="compile">
+		
 			<path id="pathid">
-	
-				<fileset dir="D:\javafx\javafx-sdk-15.0.1\lib">
-				  
+				
+				<fileset dir="D:\javafx\javafx-sdk-15.0.1\lib">				
+					<include name= "*.jar"/>					
+				</fileset>				
+				<fileset dir= "${junit.dir}">						
 					<include name="*.jar"/>
 				</fileset>
-				
+			
 			</path>
-
 			<javac includeantruntime="false" srcdir="./src" destdir="intermediary">
-					<classpath refid="pathid"/>
+				<classpath refid="pathid"/>
 			</javac>
+		
 		</target>
 		
-		
-</project> 
+	</project>
